[project]
name = "tom-antares"
version = "0.0.0" # version supplied by poetry-dynamic-versioning
description = "'Antares broker module for the TOM Toolkit'"
authors = [
    {name = "TOM Toolkit Project", email = "tomtoolkit-maintainers@lco.global"},
]
maintainers = [
    {name = "Joey Chatelain", email = "jchate6@gmail.com"},
    {name = "William Lindstrom", email = "llindstrom@lco.global"},
    {name = "Rachel Street", email = "rstreet@lco.global"},
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10.0,<3.13"
dependencies = [
    "tomtoolkit (>=2.27.0,<3.0.0)",
    "antares-client (>=1.11.1,<2.0.0)",
    "elasticsearch-dsl (>=8.18.0,<9.0.0)"
]

[tool.poetry.group.test.dependencies]
factory_boy = ">3.2.1,<3.4"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# the default pattern regex makes the 'v' manditory
# this pattern modifies the default regex in order to make the 'v' optional
# ('v' becomes '[v]?' meaning a single v, [v], and ? means optional)
pattern = "(?x)^[v]?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# substitute version not only in pyproject.toml (which the config block above does)
# but also the __version__.py file (using the default value of the files property).
[tool.poetry-dynamic-versioning.substitution]

[build-system]
requires = ["poetry-core >=1.0.0", "poetry-dynamic-versioning >=1.0.0, <2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"